version/0.39/_sources/api/api_contents.rst.txt
.. _ref_api:

API reference
=============

This API reference corresponds to Ansys Fluent 2026 R1. PyFluent maintains strong backward compatibility guarantees, so scripts targeting older Ansys versions are expected to work without modification.

This is PyFluent's class and function reference. Please refer to the :ref:`ref_user_guide` for
full guidelines on their use.

All the public APIs for PyFluent are listed in the left hand margin. Some key APIs are mentioned below:

Meshing mode
------------

The :ref:`meshing workflow <ref_meshing_workflow_new>` and :ref:`meshing utilities <ref_meshing_datamodel_meshing_utilities>` provide the primary interface for
creating, editing, managing, and querying mesh data.

Solution mode
-------------

The solver :ref:`settings API <ref_root>` is the main interface for controlling and running the solver.


.. toctree::
    :maxdepth: 2
    :hidden:
    :caption: ansys.fluent.core

    docker/docker_contents
    filereader/filereader_contents
    launcher/launcher_contents
    meshing/meshing_workflow_new
    meshing/meshing_utilities
    scheduler/scheduler_contents
    services/services_contents
    solver/error_message
    solver/settings_root
    solver/flicing
    solver/preferences
    solver_workflows/solver_workflows_contents
    streaming_services/streaming_services_contents
    utils/utils_contents
    legacy/legacy_contents
    data_model_cache
    exceptions
    file_session
    field_data_interfaces
    fluent_connection
    journaling
    logger
    module_config
    parametric
    rpvars
    search
    session_base_meshing
    session_meshing
    session_pure_meshing
    session_solver_icing
    session_solver_lite
    session_solver
    session
    session_utilities
    system_coupling
    pyfluent_warnings
    workflow_new
    deprecated_apis
